# init_desktop.rs

./: Cargo.toml  README.md  shell.nix
.github/workflows/: check-lint.yaml
src/: clone.rs  installdep.rs  main.rs  utils.rs
